Add LineStackingStrategy, OpticalMarginAlignment and TextDecorations

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -242,3 +242,5 @@ dotnet_diagnostic.CA1812.severity = none
 dotnet_diagnostic.VSTHRD101.severity = none
 # IDE0045: Convert to conditional expression
 dotnet_diagnostic.IDE0045.severity = none
+# CA1028: Enum Storage should be Int32
+dotnet_diagnostic.CA1028.severity = none
