Set PlatformTarget to AnyCPU for Server

--- a/src/WinUIShell.Server/WinUIShell.Server.csproj
+++ b/src/WinUIShell.Server/WinUIShell.Server.csproj
@@ -5,7 +5,8 @@
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>WinUIShell.Server</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Platforms>x64</Platforms>
+    <Platforms>AnyCPU</Platforms>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
     <SelfContained>true</SelfContained>
