--- a/.github/workflows/publish-module.yml
+++ b/.github/workflows/publish-module.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.205'
+          global-json-file: src/global.json
       - name: Build
         shell: pwsh
         run: |
