Set up project to use Uno Platform

--- a/src/WinUIShell.Server/WinUIShell.Server.csproj
+++ b/src/WinUIShell.Server/WinUIShell.Server.csproj
@@ -1,20 +1,25 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows10.0.18362.0</TargetFramework>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <OutputType>Exe</OutputType>
+    <UnoSingleProject>true</UnoSingleProject>
+    <TargetFrameworks>net9.0-desktop;net9.0-windows10.0.26100</TargetFrameworks>
+    <UnoFeatures>
+        SkiaRenderer;
+    </UnoFeatures>
+
+    <!--<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>-->
     <RootNamespace>WinUIShell.Server</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Platforms>AnyCPU</Platforms>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
-    <UseWinUI>true</UseWinUI>
+    <!--<RuntimeIdentifiers>win-x64</RuntimeIdentifiers>-->
+    <!--<UseWinUI>true</UseWinUI>-->
     <SelfContained>true</SelfContained>
-    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+    <!--<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>-->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <WindowsPackageType>None</WindowsPackageType>
-    <EnableMsixTooling>true</EnableMsixTooling>
+    <!--<EnableMsixTooling>true</EnableMsixTooling>-->
     <!-- <TreatWarningsAsErrors>True</TreatWarningsAsErrors> -->
     <AnalysisMode>All</AnalysisMode>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
@@ -28,10 +33,12 @@
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
+  <!--
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250310001" />
   </ItemGroup>
+  -->
 
   <ItemGroup>
     <ProjectReference Include="..\WinUIShell.Common\WinUIShell.Common.csproj" />
