--- a/src/WinUIShell.Server/WinUIShell.Server.csproj
+++ b/src/WinUIShell.Server/WinUIShell.Server.csproj
@@ -3,8 +3,11 @@
     <OutputType>Exe</OutputType>
     <UnoSingleProject>true</UnoSingleProject>
     <TargetFrameworks>net9.0-desktop;net9.0-windows10.0.26100</TargetFrameworks>
+
+    <DefineConstants Condition=" '$(TargetFramework)' == 'net9.0-desktop' ">USE_UNO</DefineConstants>
+
     <UnoFeatures>
-        SkiaRenderer;
+      SkiaRenderer;
     </UnoFeatures>
 
     <!--<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>-->
