--- a/src/WinUIShell.Server/Properties/launchSettings.json
+++ b/src/WinUIShell.Server/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
-    "Server": {
-      "commandName": "Project"
+    "ExportApi": {
+        "commandName": "Project",
+        "commandLineArgs": "$(MSBuildProjectDirectory)\\..\\WinUIShell\\Api.json"
     }
   }
 }
