--- a/src/WinUIShell/WinUIShell.csproj
+++ b/src/WinUIShell/WinUIShell.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="Generator.json" />
+    <AdditionalFiles Include="Api.xml" />
   </ItemGroup>
 
 </Project>
