--- a/src/WinUIShell.Generator/Properties/launchSettings.json
+++ b/src/WinUIShell.Generator/Properties/launchSettings.json
@@ -1,6 +1,10 @@
 {
   "profiles": {
-    "Generator": {
+    "Generator(Common)": {
+      "commandName": "DebugRoslynComponent",
+      "targetProject": "..\\WinUIShell.Common\\WinUIShell.Common.csproj"
+    },
+    "Generator(WinUIShell)": {
       "commandName": "DebugRoslynComponent",
       "targetProject": "..\\WinUIShell\\WinUIShell.csproj"
     }
