--- a/src/WinUIShell.Generator/WinUIShell.Generator.csproj
+++ b/src/WinUIShell.Generator/WinUIShell.Generator.csproj
@@ -12,6 +12,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
-    <Compile Include="..\WinUIShell.Server\API\Api.cs" />
+    <Compile Include="..\WinUIShell.ApiExporter\Api.cs" />
   </ItemGroup>
 </Project>
