Replace ApiExporter assembly name with Server for types defined in the server assembly

--- a/src/WinUIShell.ApiExporter/WinUIShell.ApiExporter.csproj
+++ b/src/WinUIShell.ApiExporter/WinUIShell.ApiExporter.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\WinUIShell.Server\System\EventCallbackRunspaceMode.cs" />
+    <Compile Include="..\WinUIShell.Server\System\EventCallbackRunspaceMode.cs" Link="ServerTypes\EventCallbackRunspaceMode.cs" />
   </ItemGroup>
 </Project>
